fixed spacing and angle

--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,10 @@ textarea {
   overflow: auto;
 }
 
+.section-spacing {
+  margin: calc(1rem * 6) 0;
+}
+
 header {
   top: 0;
   left: 0;
@@ -137,11 +141,6 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: var(--secondary);
-}
-
-.hero-img {
-  width: 90%;
-  height: auto;
 }
 
 .about-blurb {
